--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,33 @@
 .App {
     margin: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'MuseoModerno', cursive;
   }
+
+  h1 {
+    font-family: 'Arial', sans-serif;
+    font-size: 5em;
+  }
+
+  button {
+  background-color: rgb(87, 86, 86);
+  color: whitesmoke;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  }
+
+  #nest {
+    background-color: rgb(235, 233, 233);
+    border: 2px solid lightgray;
+    padding: 3em;
+    margin: 2em;
+    border-radius: 30px;
+  }
+
+  p {
+    font-size: '1.5em';
+    line-height: '.5em';
+    margin-bottom: '.5em';
+  } 
+
