--- a/client/style.css
+++ b/client/style.css
@@ -25,9 +25,7 @@
     border-radius: 30px;
   }
 
-  p {
-    font-size: '1.5em';
-    line-height: '.5em';
-    margin-bottom: '.5em';
-  } 
 
+  h2:hover {
+    font-style: italic;
+  }
